# cutter

./: CMakeLists.txt
.github/actions/build-linux-old/: action.yml  entrypoint.sh
.github/workflows/: ci.yml
scripts/: appimage_embed_python.sh  fetch_deps.sh  rz-libyara.sh
src/: CMakeLists.txt
src/common/: BinaryTrees.h
src/core/: MainWindow.cpp  MainWindow.h
src/plugins/: PluginManager.cpp
src/tests/: CMakeLists.txt  terminal_test.cpp
src/widgets/: ConsoleWidget.cpp  ConsoleWidget.h  ConsoleWidget.ui  DisassemblyWidget.cpp  DisassemblyWidget.h  TerminalDisplay.cpp  TerminalDisplay.h
